# tinyrenderer-rs

./: .gitignore  Cargo.toml  Justfile  flake.nix  output.ppm  output.tga  output.txt
src/: boundingbox.rs  grid.rs  lib.rs  main.rs  obj.rs  renderer.rs  util.rs  vec3.rs
